<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_your_role" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Email"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:onClick="btnCreate"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>